<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:orientation="horizontal"
    android:weightSum="10" >
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:weightSum="20" >
        
        <LinearLayout
        	android:layout_width="0dp"
        	android:layout_height="0dp"
        	android:layout_weight="2" />
        
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/zephyric_studios"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:textSize="50dp"
            android:text="@string/zephyric_studios"
            android:textColor="@color/accent"
            android:gravity="right" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:id="@+id/please"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="@string/please"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingLeft="23dp" >
            
            <TextView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-23dp"
                android:text="@string/credits"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/accent" />
            
            <TextView
                android:id="@+id/mazen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mazen"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="0dp" />
            
            <TextView
                android:id="@+id/mazen_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mazen_credits"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="15dp" />
            
            <TextView
                android:id="@+id/everyone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/everyone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginLeft="0dp" />
            
            <TextView
                android:id="@+id/everyone_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/everyone_credits"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="15dp" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>