<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_snitch_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        
        android:text="@string/group"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:context=".SnitchMainPage" />

    <LinearLayout
        android:id="@+id/title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text_snitch_title"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/start_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.6" />

        <RelativeLayout
            android:id="@+id/snitch_start_button"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="70dp"
            android:layout_weight="5.4"
            android:clickable="true" >

            <ImageView
                android:id="@+id/image_snitch_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/access_start"
                android:src="@drawable/start_icon" />

            <TextView
                android:id="@+id/text_snitch_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/image_snitch_start"
                
                android:text="@string/start"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/snitch_settings_button"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_weight="5.4"
            android:clickable="true" >

            <ImageView
                android:id="@+id/image_snitch_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/access_settings"
                android:src="@drawable/time_icon" />

            <TextView
                android:id="@+id/text_snitch_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/image_snitch_settings"
                
                android:text="@string/settings"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.6" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/seeker_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/start_button_layout"
        android:layout_below="@id/title_line"
        android:layout_marginBottom="20dp"
        android:animateLayoutChanges="true" />
    
    <LinearLayout
        android:id="@+id/interval_settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical"
        android:visibility="gone" >
        
        <RelativeLayout
            android:id="@+id/grey_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/grey"
            android:alpha="0.5"
            android:clickable="true" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="20dp"
            android:clickable="true" >
            
            <Button
                android:id="@+id/button_15s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_marginBottom="17dp"
                android:text="@string/s15s"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:padding="10dp" />
            
            <Button
                android:id="@+id/button_30s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_marginBottom="17dp"
                android:text="@string/s30s"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:padding="10dp" />
            
            <Button
                android:id="@+id/button_45s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:layout_marginBottom="17dp"
                android:text="@string/s45s"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:padding="10dp" />
            
            <Button
                android:id="@+id/button_60s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/accent"
                android:text="@string/s1m"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:padding="10dp" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <RelativeLayout
        android:id="@+id/loading_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/grey"
        android:alpha="0.75"
        android:visibility="gone" >

        <TextView
	        android:id="@+id/text_sending"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true"
        	android:text="@string/sending_texts"
        	android:textAppearance="?android:attr/textAppearanceLargeInverse" />

    	<ProgressBar
        	android:id="@+id/progressBar"
        	style="?android:attr/progressBarStyleLarge"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_above="@+id/text_sending"
        	android:layout_centerHorizontal="true"
        	android:layout_marginBottom="62dp" />
        
    </RelativeLayout>
    
</RelativeLayout>